scrollbar issues, modal icons & formatting

--- a/main/styles/main.scss
+++ b/main/styles/main.scss
@@ -32,7 +32,7 @@
 body {
   background-color: #eee;
   margin: 0;
-  overflow-y: hidden;
+  // overflow-y: hidden;
 }
 
 a, a:link, a:visited, a:hover, a:active {
@@ -49,6 +49,21 @@ a, a:link, a:visited, a:hover, a:active {
                                   not supported by any browser */
 }
 
+
+.clearfix:after {
+    content:"";
+    display:block;
+    clear:both;
+    display: block;
+    width: 100%;
+    margin: 20px auto 0;
+    border-bottom: 1px solid #bfbfbf;
+}
+
+//take this out -- extra space for image
+.plant-image-container {
+  height: 200px;
+}
 
 nav {
   padding: 5px;
@@ -121,7 +136,7 @@ nav {
 
 .searchContainer {
   overflow: auto;
-  height: 100vh;
+  height: calc(100vh - 45px);
   float: left;
   margin-top: 45px;
 }
@@ -268,12 +283,13 @@ nav {
 }
 
 .add-to-garden-results {
-  font-size: 2em;
+  font-size: 2.5em;
   color: #9AB87A;
+  float: right;
+  padding: 10px;
 }
 
 .add-to-garden-results:hover {
-  font-size: 2em;
   color: #A7C18B;
   cursor: pointer;
 }
@@ -305,6 +321,7 @@ nav {
 }
 .icon-carrot:before {
     content: "\e909";
+    color: #f4a149;
 }
 .icon-garlic:before {
     content: "\e90a";
